# mplike

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/boards/: testmap.gltf
assets/shader/: space_shader.wgsl
src/: main.rs
src/board/: board_element.rs  mod.rs  player.rs  space.rs  space_shader.rs
src/input/: gamepad.rs  intent.rs  mod.rs
